--- a/26_Day_Python_for_web/templates/home.html
+++ b/26_Day_Python_for_web/templates/home.html
@@ -7,6 +7,15 @@
   </head>
 
   <body>
-    <h1>Welcome Home Ruben!</h1>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/about">About</a></li>
+    </ul>
+    <h1>Welcome to {{name}}</h1>
+    <ul>
+      {% for tech in techs %}
+      <li>{{tech}}</li>
+      {% endfor %}
+    </ul>
   </body>
 </html>
